horizontal scrollbar no longer showing

--- a/front-end/sentimentbot/src/Components/billing/billing.css
+++ b/front-end/sentimentbot/src/Components/billing/billing.css
@@ -72,7 +72,8 @@
 @media (max-width:900px) and (min-width:501px) {
 
     .billing-card-body {
-        width: 83%;
+        /* width: 83%; */
+        width: 100%;
         /* width: 30rem; */
         margin-right: 5rem;
     }
